[FIX] Fix color

--- a/index.html
+++ b/index.html
@@ -11,73 +11,73 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row my-5">
             <div class="col-12">
-                <div class="content d-flex justify-content-center">
+                <div class="content text-center">
                     <h1>Bootstrap 5 Responsive Grid</h1>
                 </div>
             </div>
             <div class="col-12">
-                <div class="content d-flex justify-content-center">
+                <div class="content text-center">
                     <p>Layout a griglia con diversi breakpoint (sm, md, lg).</p>
                 </div>
             </div>
         </div>
         <div class="row my-5">
-            <div class="col-4">
+            <div class="col-4 p-2">
                 <div class="content">
                     <h2>Colonna 1</h2>
                     <p>Larghezza intera su dispositivi piccoli, metá larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
                 </div>
             </div>
-            <div class="col-8">
-                <div class="content bg-secondary text-white">
+            <div class="col-8 p-2 bg-secondary">
+                <div class="content text-white">
                     <h2>Colonna 2</h2>
                     <p>Larghezza intera su dispositivi piccoli, metá larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
                 </div>
             </div>
         </div>
         <div class="row my-5">
-            <div class="col-4">
-                <div class="content bg-primary text-white">
+            <div class="col-4 p-2 bg-primary">
+                <div class="content text-white">
                     <h2>Colonna 1</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-4">
-                <div class="content bg-success text-white">
+            <div class="col-4 p-2 bg-success">
+                <div class="content text-white">
                     <h2>Colonna 2</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-4">
-                <div class="content bg-danger text-white">
+            <div class="col-4 p-2 bg-danger">
+                <div class="content text-white">
                     <h2>Colonna 3</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
         </div>
         <div class="row my-5">
-            <div class="col-3">
-                <div class="content bg-info text-white">
+            <div class="col-3 p-2 bg-info">
+                <div class="content text-white">
                     <h2>Colonna 1</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-3">
-                <div class="content bg-warning text-white">
+            <div class="col-3 p-2 bg-warning">
+                <div class="content text-white">
                     <h2>Colonna 2</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-3">
-                <div class="content bg-dark text-white">
+            <div class="col-3 p-2 bg-black">
+                <div class="content text-white">
                     <h2>Colonna 3</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-3">
+            <div class="col-3 p-2">
                 <div class="content">
                     <h2>Colonna 4</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
