--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             </div>
         </div>
         <div class="row my-5">
-            <div class="col-4 p-2">
+            <div class="col-md-4 col-sm-12 p-2">
                 <div class="content">
                     <h2>Colonna 1</h2>
                     <p>Larghezza intera su dispositivi piccoli, metá larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
                 </div>
             </div>
-            <div class="col-8 p-2 bg-secondary">
+            <div class="col-md-8  col-sm-12 p-2  bg-secondary">
                 <div class="content text-white">
                     <h2>Colonna 2</h2>
                     <p>Larghezza intera su dispositivi piccoli, metá larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
