--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
             </div>
         </div>
         <div class="row my-5">
-            <div class="col-4 p-2 bg-primary">
+            <div class="col-md-4 col-sm-6 p-2 bg-primary">
                 <div class="content text-white">
                     <h2>Colonna 1</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-4 p-2 bg-success">
+            <div class="col-md-4 col-sm-6 p-2 bg-success">
                 <div class="content text-white">
                     <h2>Colonna 2</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-4 p-2 bg-danger">
+            <div class="col-md-4 p-2 bg-danger">
                 <div class="content text-white">
                     <h2>Colonna 3</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
@@ -59,25 +59,25 @@
             </div>
         </div>
         <div class="row my-5">
-            <div class="col-3 p-2 bg-info">
+            <div class="col-md-3 col-sm-6 p-2 bg-info">
                 <div class="content text-white">
                     <h2>Colonna 1</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-3 p-2 bg-warning">
+            <div class="col-md-3 col-sm-6 p-2 bg-warning">
                 <div class="content text-white">
                     <h2>Colonna 2</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-3 p-2 bg-black">
+            <div class="col-md-3 col-sm-6 p-2 bg-black">
                 <div class="content text-white">
                     <h2>Colonna 3</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-3 p-2">
+            <div class="col-md-3 col-sm-6 p-2">
                 <div class="content">
                     <h2>Colonna 4</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
