[DONE] Esercizio finito + Bonus text-white

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         dispositivi grandi.</p>
                 </div>
             </div>
-            <div class="col-md-8  col-sm-12 p-2  bg-secondary">
+            <div class="col-md-8 col-sm-12 p-2  bg-secondary">
                 <div class="content text-white">
                     <h2>Colonna 2</h2>
                     <p>Larghezza intera su dispositivi piccoli, metá larghezza su dispositivi medi e un terzo su
@@ -40,21 +40,21 @@
                 </div>
             </div>
         </div>
-        <div class="row my-5">
+        <div class="row my-5 text-white">
             <div class="col-md-4 col-sm-6 p-2 bg-primary">
-                <div class="content text-white">
+                <div class="content">
                     <h2>Colonna 1</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6 p-2 bg-success">
-                <div class="content text-white">
+                <div class="content">
                     <h2>Colonna 2</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
             <div class="col-md-4 p-2 bg-danger">
-                <div class="content text-white">
+                <div class="content">
                     <h2>Colonna 3</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
                 </div>
