[FIX] Correzione esercizio

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             </div>
         </div>
         <div class="row my-5">
-            <div class="col-md-4 col-sm-12 p-2">
+            <div class="col-lg-4 col-md-6 col-sm-12 p-2">
                 <div class="content">
                     <h2>Colonna 1</h2>
                     <p>Larghezza intera su dispositivi piccoli, metá larghezza su dispositivi medi e un terzo su
                         dispositivi grandi.</p>
                 </div>
             </div>
-            <div class="col-md-8 col-sm-12 p-2  bg-secondary">
+            <div class="col-lg-8 col-md-6 col-sm-12 p-2  bg-secondary">
                 <div class="content text-white">
                     <h2>Colonna 2</h2>
                     <p>Larghezza intera su dispositivi piccoli, metá larghezza su dispositivi medi e un terzo su
@@ -41,19 +41,19 @@
             </div>
         </div>
         <div class="row my-5 text-white">
-            <div class="col-md-4 col-sm-6 p-2 bg-primary">
+            <div class="col-lg-4 col-md-4 col-sm-6 p-2 bg-primary">
                 <div class="content">
                     <h2>Colonna 1</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 p-2 bg-success">
+            <div class="col-lg-4 col-md-4 col-sm-6 p-2 bg-success">
                 <div class="content">
                     <h2>Colonna 2</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-md-4 p-2 bg-danger">
+            <div class="col-lg-4 col-md-4 p-2 bg-danger">
                 <div class="content">
                     <h2>Colonna 3</h2>
                     <p>Metá larghezza su dispositivi piccoli e un terzo su dispositivi medi e piú grandi.</p>
@@ -61,25 +61,25 @@
             </div>
         </div>
         <div class="row my-5">
-            <div class="col-md-3 col-sm-6 p-2 bg-info">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-2 bg-info">
                 <div class="content text-white">
                     <h2>Colonna 1</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6 p-2 bg-warning">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-2 bg-warning">
                 <div class="content text-white">
                     <h2>Colonna 2</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6 p-2 bg-black">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-2 bg-black">
                 <div class="content text-white">
                     <h2>Colonna 3</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-6 p-2">
+            <div class="col-lg-3 col-md-3 col-sm-6 p-2">
                 <div class="content">
                     <h2>Colonna 4</h2>
                     <p>Metá larghezza su dispositivi piccoli e un quarto su dispositivi medi e piú grandi.</p>
